tests/main_tests/panicfmt_ui_tests/flatten_panicvals_mismatched_length-err.stderr
error[E0308]: mismatched types
 --> tests/main_tests/panicfmt_ui_tests/flatten_panicvals_mismatched_length-err.rs:3:31
  |
3 | const _: [PanicVal<'_>; 20] = flatten_panicvals!(FmtArg::DEBUG; 10u8, 20u8);
  |                         --    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected an array with a size of 20, found one with a size of 2
  |                         |
  |                         help: consider specifying the actual array length: `2`
  |
  = note: expected array `[PanicVal<'static>; 20]`
             found array `[PanicVal<'_>; 2]`
  = note: this error originates in the macro `$crate::__to_pvf_inner` which comes from the expansion of the macro `flatten_panicvals` (in Nightly builds, run with -Z macro-backtrace for more info)
